# lvauthrin.github.io

./: .firebaserc  .gitignore  BUILD.bazel  Gemfile  README.md  WORKSPACE  _config.yml  add-problem.sh  code.markdown  firebase.json  index.html  index.markdown  jekyll.bzl  package.json  pnpm-lock.yaml  wotd-widget.html
_data/: home.yml  problems.json
_includes/: custom_head.html  head-custom-google-tag-mananger.html  head-custom.html
_layouts/: _defaults.html  default.html  home.html  post.html
_posts/: 2023-02-01-lazyvim-flutter.markdown  2023-02-01-lunarvim-flutter.markdown  2023-02-05-flutter-devices.markdown
assets/css/: customizations.scss
scripts/: add-problem.sh  bundle.sh  check-solutions.sc  serve.sh
site/: _config.yml  code.markdown  index.markdown
site/_data/: home.yml
site/_includes/: head-custom-firebase.html
site/_layouts/: _defaults.html
site/_posts/: 2023-02-01-lazyvim-flutter.markdown  2023-02-05-flutter-devices.markdown  2023-02-11-coding-problems.markdown  2023-03-16-vim-bulk-open-urls.markdown
site/_sass/: customizations.scss
